# lysergic-dream-engine

./: .gitignore  audio.py  audio_gemini.py  database.py  engine_audio.py  engine_video.py  main.py  pyproject.toml  requirements.txt  temp_audio.srt  test.py  validator.py  video.py  yt.py
audio/: audio_gemini.py  engine.py
video/: video.py
